force-app/main/default/objects/DRE__DRESettings__c/DRE__DRESettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls behaviour of DRE</description>
    <label>DRE Settings</label>
</CustomObject>