force-app/main/default/objects/DRE__DRESettings__c/fields/DRE__IsAutoBulk__c.field-meta.xml
<CustomField>
    <fullName>DRE__IsAutoBulk__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected DRE will automatically process records in separate batches. Doing so can increase system robustness at the cost of losing real-time feedback. Enable this setting if your organization contains complex automation processes</description>
    <inlineHelpText>If selected DRE will automatically process records in separate batches. Doing so can increase system robustness at the cost of losing real-time feedback. Enable this setting if your organization contains complex automation processes</inlineHelpText>
    <label>Enable Auto-Bulk</label>
    <type>Checkbox</type>
</CustomField>