force-app/main/default/objects/DRE__DRESettings__c/fields/DRE__IsDebugMode__c.field-meta.xml
<CustomField>
    <fullName>DRE__IsDebugMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected DRE will display more detailed error messages (not user friendly)</description>
    <label>Enable Debug Mode</label>
    <type>Checkbox</type>
</CustomField>