force-app/main/default/objects/DRE__DRESettings__c/fields/DRE__IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>DRE__IsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable DRE</label>
    <type>Checkbox</type>
</CustomField>