force-app/main/default/objects/DRE__DRESettings__c/fields/DRE__IsLogging__c.field-meta.xml
<CustomField>
    <fullName>DRE__IsLogging__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected creates log records for DRE events in the DRE Event Log table</description>
    <inlineHelpText>If selected creates log records for DRE events in the DRE Event Log table</inlineHelpText>
    <label>Enable Event Logs</label>
    <type>Checkbox</type>
</CustomField>