force-app/main/default/objects/DRE__DRESettings__c/fields/DRE__Suppress_Errors__c.field-meta.xml
<CustomField>
    <fullName>DRE__Suppress_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected all DRE errors will be suppressed and logged in the DRE Event Log table, thereby preventing users from receiving real-time feedback when error occurs</description>
    <inlineHelpText>If selected all DRE errors will be suppressed and logged in the DRE Event Log table, thereby preventing users from receiving real-time feedback when error occurs</inlineHelpText>
    <label>Suppress Errors</label>
    <type>Checkbox</type>
</CustomField>